# aoc

./: .gitignore  publicGet.sh  readme.md  solveWithMetrics.sh
2017/day1/: output.txt  part1.py  part2.py
2017/day2/: output.txt  part1.py  part2.py
2017/day3/: output.txt  part1.py  part2.py
2017/day4/: output.txt  part1.py  part2.py
2017/day5/: output.txt  part1.py  part2.py
2017/day6/: output.txt  part1.py  part2.py
2017/day7/: output.txt  part1.py  part2.py
2019/: readme.md
2019/day1/: output.txt  part1.py  part2.py
2019/day2/: output.txt  part1.py  part2.py
2019/day3/: output.txt  part1.py  part2.py
2019/day4/: output.txt  part1.py  part2.py
2019/day5/: output.txt  part1.py  part2.py
2019/day6/: output.txt  part1.py  part2.py
2019/day7/: part1.py  part2.py  test.py
2020/: readme.md
2020/day1/: output.txt
2020/day10/: output.txt  part2.py
2020/day11/: output.txt  part2.py
2020/day12/: output.txt  part1.py
2020/day14/: output.txt  part2.py
2020/day15/: output.txt  part1.py  part2.py
2021/: readme.md
2022/: dune-project  edit.sh  readme.md  solveWithMetrics.sh
2023/: dune-project  e.sh  readme.md  run.sh  solveWithMetrics.sh
2023/lib/: common.ml  dune
day1/: output.txt  part1.py  part2.py
day10/: part1.py
day11/: part1.py
day12/: part2.py
day13/: output.txt  part1.py  part2.py
day14/: part1.py
day2/: output.txt  part1.py  part2.py
day3/: part1.py
day4/: output.txt  part1.py
day7/: part1.py
day8/: output.txt
scripts/: findGlobalStanding.py  publicGet.sh  scanForInput.py  solveWithMetrics.sh
(+95 files in other folders)
